fix spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,10 @@
 .App {
   position: relative;
   background: #f2f2f2;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
 
   .App-header {
     width: 100%;
