--- a/src/components/switcher/switcher.scss
+++ b/src/components/switcher/switcher.scss
@@ -1,22 +1,24 @@
 .switcher {
   position: absolute;
+  z-index: 1;
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  z-index: 1;
+  background: #f2f2f2;
+
+  overflow: scroll;
 
   .switcher-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0 20px;
     width: 100%;
     max-width: 90%;
-    height: 70vh;
+    min-height: 70vh;
     flex-wrap: wrap;
-    background: #f2f2f2;
   }
 
   .downloading {
@@ -32,6 +34,7 @@
       transition: all 0.6s;
     }
   }
+
   .puzzle-images {
     position: relative;
     display: flex;
@@ -39,27 +42,28 @@
     justify-content: flex-end;
     align-items: flex-start;
     height: 120px;
-    width: 100px;
+    width: 120px;
+    margin-bottom: 20px;
+    padding: 0 20px;
 
     .images {
       width: 90%;
-      height: 100px;
+      height: 90%;
+
       object-fit: contain;
       cursor: pointer;
+
+      transition: 0.3s;
     }
 
     span {
       font-weight: 100;
       font-size: 0.8rem;
       padding: 5px 20px;
-      transition: all 0.3s;
-      cursor: pointer;
+    }
 
-      &:hover {
-        transform: scale(1.1);
-      }
+    &:hover img {
+      transform: scale(1.2) rotate(5deg);
     }
   }
 }
-// @media screen and (max-width: 500px) {
-// }
